# gym_project

./: README.md  pyproject.toml
gym_project/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
gym_project/accounts/migrations/: 0001_initial.py  0002_alter_user_routine.py
gym_project/accounts/templates/accounts/: home.html  login.html  signup.html
gym_project/api/: serializers.py  tests.py  urls.py  views.py
gym_project/api/tests/: test_views.py
gym_project/gym/: admin.py  forms.py  models.py  urls.py  views.py
gym_project/gym/management/commands/: report_completed_routines.py
gym_project/gym/migrations/: 0001_initial.py  0002_remove_equipment_exercise_exercise_equipment.py  0002_routine.py  0002_routine_user.py  0003_alter_routine_day.py  0004_alter_routine_day.py  0005_alter_routine_day.py
gym_project/gym/templates/gym/: base.html  create_equipment.html  create_exercise.html  create_routine.html  create_routine_block.html  home.html  homepage.html  my_routine.html
gym_project/gym_project/: asgi.py  settings.py  urls.py  wsgi.py
gym_project/user/: urls.py  views.py
gym_project/user/templates/user/: signupuser.html
